--- a/KGCA40b/Quadtree_0/Quadtree_0.vcxproj
+++ b/KGCA40b/Quadtree_0/Quadtree_0.vcxproj
@@ -145,11 +145,13 @@
     <ClCompile Include="TNode.cpp" />
     <ClCompile Include="TObject.cpp" />
     <ClCompile Include="TQuadtree.cpp" />
+    <ClCompile Include="TVector2.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="TNode.h" />
     <ClInclude Include="TObject.h" />
     <ClInclude Include="TQuadtree.h" />
+    <ClInclude Include="TVector2.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
