--- a/KGCA40b/Quadtree_0/Quadtree_0.vcxproj.filters
+++ b/KGCA40b/Quadtree_0/Quadtree_0.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="TObject.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="TVector2.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="TNode.h">
@@ -36,6 +39,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="TObject.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="TVector2.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
