--- a/KGCA40b/CreateDevice/CreateDevice.vcxproj.filters
+++ b/KGCA40b/CreateDevice/CreateDevice.vcxproj.filters
@@ -18,12 +18,9 @@
     <ClCompile Include="Sample.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="TWindow.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="TWindow.h">
+    <ClInclude Include="Sample.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
