--- a/KGCA40b/SampleLibrary/SampleLibrary.vcxproj.filters
+++ b/KGCA40b/SampleLibrary/SampleLibrary.vcxproj.filters
@@ -24,4 +24,7 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+  </ItemGroup>
 </Project>
