--- a/KGCA40b/Quadtree_0/Quadtree_0.vcxproj.filters
+++ b/KGCA40b/Quadtree_0/Quadtree_0.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="TCollision.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="TTimer.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="TNode.h">
@@ -48,6 +51,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="TCollision.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="TTimer.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
