--- a/KGCA40b/OctreeSample/OctreeSample.vcxproj.filters
+++ b/KGCA40b/OctreeSample/OctreeSample.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="TVector3.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="TTimer.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="TCollision.h">
@@ -54,6 +57,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="TVector2.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="TTimer.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
