--- a/KGCA40b/MakePacket_Client/MakePacket_Client.vcxproj.filters
+++ b/KGCA40b/MakePacket_Client/MakePacket_Client.vcxproj.filters
@@ -18,9 +18,15 @@
     <ClCompile Include="Sample.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="TPacket.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="TProtocol.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="TPacket.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
