--- a/KGCA40b/ThreadChatting_Server/ThreadChatting_Server.vcxproj
+++ b/KGCA40b/ThreadChatting_Server/ThreadChatting_Server.vcxproj
@@ -142,9 +142,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Sample.cpp" />
+    <ClCompile Include="TNetUser.cpp" />
     <ClCompile Include="TPacket.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="TNetUser.h" />
     <ClInclude Include="TPacket.h" />
     <ClInclude Include="TProtocol.h" />
   </ItemGroup>
