--- a/KGCA40b/ThreadChatting_Server/ThreadChatting_Server.vcxproj.filters
+++ b/KGCA40b/ThreadChatting_Server/ThreadChatting_Server.vcxproj.filters
@@ -21,12 +21,18 @@
     <ClCompile Include="TPacket.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="TNetUser.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="TPacket.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="TProtocol.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="TNetUser.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
