--- a/KGCA40b/TCoreNet/TCoreNet.vcxproj
+++ b/KGCA40b/TCoreNet/TCoreNet.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{98617ca6-fe41-4536-94f6-159046e15ad9}</ProjectGuid>
-    <RootNamespace>TCoreLib</RootNamespace>
+    <ProjectGuid>{89662571-438a-489c-9630-0b2c1fc2323f}</ProjectGuid>
+    <RootNamespace>TCoreNet</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -79,7 +79,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
     <OutDir>../../output/Debug/</OutDir>
-    <IntDir>../../output/Debug/TCoreLib</IntDir>
+    <IntDir>../../output/Debug/TCoreNet</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
@@ -127,9 +127,8 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <PostBuildEvent>
-      <Command>copy "*.h" "../../include/TCore3D"
-copy "..\\..\\output\\Debug\\TCoreLib.lib" "..\\..\\Lib\\TCoreLib_d.lib"
-</Command>
+      <Command>copy "*.h" "../../include/TCoreNet/"
+copy "..\\..\\output\\Debug\\TCoreNet.lib" "..\\..\\Lib\\TCoreNet_d.lib"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -150,24 +149,18 @@ copy "..\\..\\output\\Debug\\TCoreLib.lib" "..\\..\\Lib\\TCoreLib_d.lib"
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="TCollision.cpp" />
-    <ClCompile Include="TCore.cpp" />
-    <ClCompile Include="TDevice.cpp" />
-    <ClCompile Include="TVector2.cpp" />
-    <ClCompile Include="TVector3.cpp" />
-    <ClCompile Include="TWindow.cpp" />
+    <ClCompile Include="TAsyncSelect.cpp" />
+    <ClCompile Include="TNetUser.cpp" />
+    <ClCompile Include="TNetwork.cpp" />
+    <ClCompile Include="TPacket.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="TCollision.h" />
-    <ClInclude Include="TCore.h" />
-    <ClInclude Include="TDevice.h" />
-    <ClInclude Include="TStd.h" />
-    <ClInclude Include="TVector2.h" />
-    <ClInclude Include="TVector3.h" />
-    <ClInclude Include="TWindow.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="ClassDiagram.cd" />
+    <ClInclude Include="TAsyncSelect.h" />
+    <ClInclude Include="TNetStd.h" />
+    <ClInclude Include="TNetUser.h" />
+    <ClInclude Include="TNetwork.h" />
+    <ClInclude Include="TPacket.h" />
+    <ClInclude Include="TProtocol.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
