--- a/KGCA40b/TCoreServer/TCoreServer.vcxproj
+++ b/KGCA40b/TCoreServer/TCoreServer.vcxproj
@@ -151,11 +151,13 @@ copy "..\\..\\output\\Debug\\TCoreServer.lib" "..\\..\\Lib\\TCoreServer_d.lib"</
   <ItemGroup>
     <ClCompile Include="TNetUser.cpp" />
     <ClCompile Include="TPacket.cpp" />
+    <ClCompile Include="TServer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="TNetUser.h" />
     <ClInclude Include="TPacket.h" />
     <ClInclude Include="TProtocol.h" />
+    <ClInclude Include="TServer.h" />
     <ClInclude Include="TServerStd.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
