--- a/KGCA40b/TCoreServer/TCoreServer.vcxproj.filters
+++ b/KGCA40b/TCoreServer/TCoreServer.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="TPacket.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="TServer.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="TNetUser.h">
@@ -33,6 +36,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="TServerStd.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="TServer.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
