--- a/KGCA40b/TCoreServer/TCoreServer.vcxproj.filters
+++ b/KGCA40b/TCoreServer/TCoreServer.vcxproj.filters
@@ -24,6 +24,12 @@
     <ClCompile Include="TServer.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="TServerObj.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="TThread.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="TNetUser.h">
@@ -39,6 +45,12 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="TServer.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="TThread.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="TServerObj.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
