--- a/KGCA40b/TCoreServerIOCP/TCoreServerIOCP.vcxproj.filters
+++ b/KGCA40b/TCoreServerIOCP/TCoreServerIOCP.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="TChatUser.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="TLoginServerProcess.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="TAccepter.h">
