--- a/KGCA40b/TCoreServer/TCoreServer.vcxproj.filters
+++ b/KGCA40b/TCoreServer/TCoreServer.vcxproj.filters
@@ -54,4 +54,7 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="doc.txt" />
+  </ItemGroup>
 </Project>
