--- a/KGCA40b/TCoreServer/TCoreServer.vcxproj.filters
+++ b/KGCA40b/TCoreServer/TCoreServer.vcxproj.filters
@@ -53,6 +53,9 @@
     <ClInclude Include="TServerObj.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="TObjectPool.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="doc.txt" />
