--- a/KGCA40b/TCoreServer/TCoreServer.vcxproj.filters
+++ b/KGCA40b/TCoreServer/TCoreServer.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="TThread.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="TAccepter.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="TNetUser.h">
@@ -54,6 +57,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="TObjectPool.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="TAccepter.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
