--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,7 @@
 /KGCA40b/TLinkedList/x64/Release
 /KGCA40b/x64/Release
 /KGCA40b/SampleWindow/x64/Debug
+/KGCA40b/MulticastSender/x64/Release
+/KGCA40b/TCoreServer/x64/Release
+/KGCA40b/TCoreServerIOCP/x64/Release
+/KGCA40b/udpClient/x64/Release
