--- a/KGCA40b/SampleProcedure_0/SampleProcedure_0.vcxproj.filters
+++ b/KGCA40b/SampleProcedure_0/SampleProcedure_0.vcxproj.filters
@@ -22,4 +22,7 @@
   <ItemGroup>
     <Text Include="sql.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="KGCAGAME40.sql" />
+  </ItemGroup>
 </Project>
