--- a/KGCA40b/SampleProcedure_0/SampleProcedure_0.vcxproj
+++ b/KGCA40b/SampleProcedure_0/SampleProcedure_0.vcxproj
@@ -146,6 +146,9 @@
   <ItemGroup>
     <Text Include="sql.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="KGCAGAME40.sql" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
