--- a/KGCA40b/TCoreLib/TCoreLib.vcxproj.filters
+++ b/KGCA40b/TCoreLib/TCoreLib.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="TObject3D.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="TWriteFont.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="TCore.h">
@@ -90,6 +93,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="TObject3D.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="TWriteFont.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
