--- a/KGCA40b/TCoreLib/TCoreLib.vcxproj.filters
+++ b/KGCA40b/TCoreLib/TCoreLib.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClCompile Include="TWriteFont.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="TSound.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="TCore.h">
@@ -96,6 +99,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="TWriteFont.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="TSound.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
