--- a/KGCA40b/TCoreLib/TCoreLib.vcxproj
+++ b/KGCA40b/TCoreLib/TCoreLib.vcxproj
@@ -164,6 +164,7 @@ copy "..\\..\\output\\Debug\\TCoreLib.lib" "..\\..\\Lib\\TCoreLib_d.lib"
     <ClCompile Include="TVector2.cpp" />
     <ClCompile Include="TVector3.cpp" />
     <ClCompile Include="TWindow.cpp" />
+    <ClCompile Include="TWorld.cpp" />
     <ClCompile Include="TWriteFont.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -181,6 +182,7 @@ copy "..\\..\\output\\Debug\\TCoreLib.lib" "..\\..\\Lib\\TCoreLib_d.lib"
     <ClInclude Include="TVector2.h" />
     <ClInclude Include="TVector3.h" />
     <ClInclude Include="TWindow.h" />
+    <ClInclude Include="TWorld.h" />
     <ClInclude Include="TWriteFont.h" />
   </ItemGroup>
   <ItemGroup>
